# food-security-risk-lab-mysql

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
data/processed/marts/: mart_country_year_food_security.csv
data/raw/: crop_production_country_year.csv  food_affordability_country_year.csv  rainfall_country_year.csv
docs/: country_harmonization.md  data_model.md  fewsnet_context.md  methodology.md  monthly_early_warning.md  mysql_workflow.md  real_data_sources.md  responsible_use.md
examples/: run_sample.py
notebooks/: 01_food_security_mysql_workflow.ipynb
reports/sample_run/: food_security_report.md  food_security_scores.csv
sql/: 00_init_database.sql  01_raw_tables.sql  02_indexes.sql  03_analytics_tables.sql  04_score_tables.sql  05_country_dim.sql  06_monthly_tables.sql  07_context_tables.sql
src/food_security_risk/: __init__.py  cli.py  pipeline.py  sample_data.py
src/food_security_risk/affordability/: validation.py
src/food_security_risk/agriculture/: validation.py
src/food_security_risk/climate/: validation.py
src/food_security_risk/context/: fewsnet.py
src/food_security_risk/database/: config.py  engine.py  (+2 more)
tests/: test_charts.py  test_cli.py  test_context.py  test_database.py  test_downloaders.py  test_geography.py  test_ingestion_pipeline.py  test_manifest.py  test_mart.py  test_monthly.py  test_mysql_integration.py  test_normalize.py  test_pipeline.py  test_report.py  test_sample_data.py  test_scoring.py  test_world_bank_download.py
(+11 files in other folders)
