[tool.poetry]
name = "food-security-risk-lab"
version = "0.1.0"
description = "Local MySQL platform for transparent food-security early-warning analytics."
authors = ["Diogo Ribeiro <diogo_dj@hotmail.com>"]
readme = "README.md"
packages = [{ include = "food_security_risk", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.0"
numpy = "^1.26.0"
requests = "^2.32.0"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"
pydantic = "^2.7.0"
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.0"
pymysql = "^1.1.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
nbformat = "^5.10.0"

[tool.poetry.scripts]
food-risk = "food_security_risk.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Typer encourages function calls (typer.Option/Argument) as parameter defaults;
# they are evaluated once and treated as immutable, so B008 is a false positive.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["notebooks"]

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "sqlalchemy.*", "pymysql.*", "matplotlib.*"]
ignore_missing_imports = true
